fix title overflow

--- a/styles/acceuil/mon_projet.css
+++ b/styles/acceuil/mon_projet.css
@@ -144,3 +144,8 @@ footer {
 
     }
 
+@media only screen and (max-width: 480px) {
+  .title{
+    font-size: 1.3rem;
+  }
+}
